# near-expense-tracker

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
scripts/: 1_tests.sh  2_contract_deploy.sh  3_contract_init.sh  4_demo_commands.sh
