[package]
name = "near-expense-tracker"
version = "1.0.0"
authors = ["Prathamesh Satya <prathamesh.satya@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.7"
cargo-make = "0.35.12"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
